src/sfdc/force-app/main/default/objects/B2C_AuthToken__c/B2C_AuthToken__c.object-meta.xml
<CustomObject>
    <description>... represents the B2C AuthTokens used to enable REST API access associated with NamedCredentials and B2C ClientIDs.</description>
    <label>B2C AuthToken</label>
    <nameField>
        <label>B2C AuthToken Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2C AuthTokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>