src/sfdc/force-app/main/default/objects/B2C_AuthToken__c/fields/B2C_AuthToken__c.field-meta.xml
<CustomField>
    <fullName>B2C_AuthToken__c</fullName>
    <description>... represents the AuthToken provided by the B2C Commerce Account Manager.</description>
    <inlineHelpText>... represents the AuthToken provided by the B2C Commerce Account Manager.</inlineHelpText>
    <label>B2C AuthToken</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>