src/sfdc/force-app/main/default/objects/B2C_AuthToken__c/fields/B2C_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>B2C_Client_ID__c</fullName>
    <description>... represents the B2C ClientID used to generate a B2C Commerce / Account Manager AuthToken.</description>
    <inlineHelpText>... represents the B2C ClientID used to generate a B2C Commerce / Account Manager AuthToken.</inlineHelpText>
    <label>B2C Client ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>