src/sfdc/force-app/main/default/objects/B2C_AuthToken__c/fields/B2C_ClientID_Value__c.field-meta.xml
<CustomField>
    <fullName>B2C_ClientID_Value__c</fullName>
    <description>... represents the B2C Client ID value used to request an authToken from the B2C Commerce Account Manager.</description>
    <formula>B2C_Client_ID__r.B2C_Client_ID__c</formula>
    <inlineHelpText>... represents the B2C Client ID value used to request an authToken from the B2C Commerce Account Manager.</inlineHelpText>
    <label>B2C Client ID Value</label>
    <type>Text</type>
</CustomField>