src/sfdc/force-app/main/default/objects/B2C_AuthToken__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>... represents a description / summary of the B2C AuthToken being captured.</description>
    <inlineHelpText>... represents a description / summary of the B2C AuthToken being captured.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>