src/sfdc/force-app/main/default/objects/B2C_AuthToken__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>... represents a calculation of the expiration date for a given B2C AuthToken.</description>
    <formula>(CreatedDate + (25/60/24))</formula>
    <inlineHelpText>... represents a calculation of the expiration date for a given B2C AuthToken.</inlineHelpText>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>