src/sfdc/force-app/main/default/objects/B2C_AuthToken__c/fields/Is_B2C_Client_ID_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_B2C_Client_ID_Active__c</fullName>
    <description>... describes if the parent B2C Client ID is active and can be used to request authToken from the B2C Commerce Account Manager.</description>
    <formula>B2C_Client_ID__r.Is_Active__c</formula>
    <inlineHelpText>... describes if the parent B2C Client ID is active and can be used to request authToken from the B2C Commerce Account Manager.</inlineHelpText>
    <label>Is B2C Client ID Active</label>
    <type>Checkbox</type>
</CustomField>