src/sfdc/force-app/main/default/objects/B2C_AuthToken__c/fields/Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>Is_Expired__c</fullName>
    <description>...describes if the current AuthToken is expired and should not be used for B2C Commerce REST API interactions.</description>
    <formula>(NOW() &gt; Expiration_Date__c)</formula>
    <inlineHelpText>...describes if the current AuthToken is expired and should not be used for B2C Commerce REST API interactions.</inlineHelpText>
    <label>Is Expired</label>
    <type>Checkbox</type>
</CustomField>