src/sfdc/force-app/main/default/objects/B2C_AuthToken__c/fields/Is_Invalidated__c.field-meta.xml
<CustomField>
    <fullName>Is_Invalidated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... when checked, this AuthToken is manually invalidated and cannot be used to power B2C Commerce REST API interactions.</description>
    <inlineHelpText>... when checked, this AuthToken is manually invalidated and cannot be used to power B2C Commerce REST API interactions.</inlineHelpText>
    <label>Is Manually Invalidated</label>
    <type>Checkbox</type>
</CustomField>