src/sfdc/force-app/main/default/objects/B2C_AuthToken__c/fields/Is_JWT_Certificate_Valid__c.field-meta.xml
<CustomField>
    <fullName>Is_JWT_Certificate_Valid__c</fullName>
    <description>... describes if the JWT Certificate has been verified / validated and can be used to mint JWT tokens.</description>
    <formula>B2C_Client_ID__r.Is_Certificate_Verified__c</formula>
    <inlineHelpText>... describes if the JWT Certificate has been verified / validated and can be used to mint JWT tokens.</inlineHelpText>
    <label>Is JWT Certificate Valid</label>
    <type>Checkbox</type>
</CustomField>