src/sfdc/force-app/main/default/objects/B2C_AuthToken__c/fields/Is_Valid__c.field-meta.xml
<!--suppress XmlUnusedNamespaceDeclaration -->
<CustomField>
    <fullName>Is_Valid__c</fullName>
    <description>... describes if a given B2C AuthToken is valid and should be used to authorize B2C Commerce REST API interactions.</description>
    <formula>AND(Expiration_Date__c &gt;  NOW(), Is_Invalidated__c = false)</formula>
    <inlineHelpText>... describes if a given B2C AuthToken is valid and should be used to authorize B2C Commerce REST API interactions.</inlineHelpText>
    <label>Is Valid</label>
    <type>Checkbox</type>
</CustomField>