src/sfdc/force-app/main/default/objects/B2C_AuthToken__c/fields/JWT_Certificate_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>JWT_Certificate_Developer_Name__c</fullName>
    <description>... represents the Developer Name of the certificate that signs / mints the JWTs presented to the B2C Commerce Account Manager.</description>
    <formula>B2C_Client_ID__r.JWT_Certificate_Name__c</formula>
    <inlineHelpText>... represents the Developer Name of the certificate that signs / mints the JWTs presented to the B2C Commerce Account Manager.</inlineHelpText>
    <label>JWT Certificate Developer Name</label>
    <type>Text</type>
</CustomField>