src/sfdc/force-app/main/default/objects/B2C_AuthToken__c/fields/NamedCredential_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>NamedCredential_DeveloperName__c</fullName>
    <description>... represents the developerName of the namedCredential that a B2C AuthToken is mapped to.</description>
    <inlineHelpText>... represents the developerName of the namedCredential that a B2C AuthToken is mapped to.</inlineHelpText>
    <label>Named Credential</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>