src/sfdc/force-app/main/default/objects/B2C_AuthToken__c/fields/Total_Usage__c.field-meta.xml
<CustomField>
    <fullName>Total_Usage__c</fullName>
    <defaultValue>1</defaultValue>
    <description>... describes how many times a given B2C AuthToken has been used to authorize a B2C Commerce REST API request.</description>
    <inlineHelpText>... describes how many times a given B2C AuthToken has been used to authorize a B2C Commerce REST API request.</inlineHelpText>
    <label>Total Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>