src/sfdc/force-app/main/default/objects/B2C_AuthToken__c/listViews/Active_AuthTokens.listView-meta.xml
<ListView>
    <fullName>Active_AuthTokens</fullName>
    <columns>B2C_Client_ID__c</columns>
    <columns>NAME</columns>
    <columns>Is_Valid__c</columns>
    <columns>Is_Expired__c</columns>
    <columns>Is_Invalidated__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Invalidation_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Valid__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Is_Expired__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Active AuthTokens</label>
</ListView>